Add raids history; add date formatting

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,5 +4,5 @@
     <img src="{{ url_for('static', filename='img/profile_img.jpg') }}" class="profile-logo">
     <h3>Имя пользователя: {{ current_user.username }}</h3>
     <h3>Почта: {{ current_user.email }}</h3>
-    <h3>Дата создания: {{ current_user.created_date }}</h3>
+    <h3>Дата создания: {{ current_user.created_date.strftime('%d %b, %Y %H:%M:%S') }}</h3>
 {% endblock %}
