--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,5 +37,14 @@ header {
 }
 .raid-choose {
     border: 2px solid #000;
+    padding: 10px;
     width: 30%;
+    margin-top: 1rem;
+    display: inline-block;
+}
+.raid-choose p {
+    margin: 0;
+}
+.raid-submit {
+    margin-top: 1rem;
 }
