--- a/templates/main.html
+++ b/templates/main.html
@@ -103,3 +103,108 @@
     </div>
 {% endif %}
 {% endblock %}
+{% extends "base.html" %}
+
+{% block content %}
+{% if not current_user.player %}
+    <h2 style="text-align: center">Выбери свой район</h2>
+    <img src="{{ url_for('static', filename='img/all_map.svg') }}" class="main-logo">
+    <div class="card-group">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="{{ url_for('static', filename='img/chernevo-1.svg') }}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Чернево - 1</h5>
+                <p class="card-text">
+                    Основная масса жителей Чернево 1 - это бомжи. Выбери этот район и
+                    почувствуй мощь среди остальных, ведь у бомжей высокие характеристики
+                    атаки и защиты!
+                </p>
+                <a href="/choose_area/1" class="btn btn-primary">Выбрать!</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="{{ url_for('static', filename='img/chernevo-2.svg') }}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Чернево - 2</h5>
+                <p class="card-text">
+                    Жители Чернево 2 - интеллигенты, с ними ты сможешь научить город жить.
+                    Они - наиболее сбалансированная по параметрам раса.
+                </p>
+                <a href="/choose_area/2" class="btn btn-primary">Выбрать!</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="{{ url_for('static', filename='img/bruski.svg') }}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Брусчатый посёлок</h5>
+                <p class="card-text">
+                    Брусчатый посёлок или же Бруски захвачены гопниками, поэтому ты
+                    спокойно сможешь всех спрашивать за жизнь. Гопники сильны в нападении
+                    и недорого просят за найм.
+                </p>
+                <a href="/choose_area/3" class="btn btn-primary">Выбрать!</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="{{ url_for('static', filename='img/emeralds_hills.svg') }}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Изумрудные холмы</h5>
+                <p class="card-text">
+                    Кавказцы расположились в Изумрудных холмах. Удивительно, они не знают
+                    русского языка, однако приносят наибольший доход и просят оплату меньше всех
+                    других рас.
+                </p>
+                <a href="/choose_area/4" class="btn btn-primary">Выбрать!</a>
+            </div>
+        </div>
+    </div>
+{% else %}
+    <div class="container" style="display: flex; align-items: center;">
+        <div class="main-block">
+            <h3>Нанять юнитов в армию:</h3>
+            <form action="" method="post">
+                {{ buy_form.hidden_tag() }}
+                <p>
+                    {{ buy_form.race.label }}<br>
+                    {{ buy_form.race }}<br>
+                </p>
+                <p>
+                    {{ buy_form.number.label }}<br>
+                    {{ buy_form.number }}<br>
+                </p>
+                <p>{{ buy_form.submit(type="submit", class="btn btn-primary") }}</p>
+                {{ message_buy }}
+            </form>
+        </div>
+        <div class="main-block">
+            <h3>Статистика:</h3>
+            <p>Армия:</p>
+            <ol>
+            {% for item in other[0] %}
+                <li>{{ item[0] }} - {{ item[1] }}ед.</li>
+            {% endfor %}
+            </ol>
+            <p>Деньги: {{ other[1] }}</p>
+            <p class="text-success">Денег в минуту: {{ other[2] }} +</p>
+            <p>Мощь армии: {{ other[3] }} силы</p>
+        </div>
+        <div class="main-block">
+            <h3>Доступные апгрейды расы:</h3>
+            <p>*Здесь можно увеличить мощь армии*</p>
+            {% if upgrade_form.race_upg.choices|length >= 1 %}
+                <form action="" method="post">
+                    {{ upgrade_form.hidden_tag() }}
+                    <p>
+                        {{ upgrade_form.race_upg.label }}<br>
+                        {{ upgrade_form.race_upg }}<br>
+                    </p>
+                    <p>{{ upgrade_form.submit_upg(type="submit", class="btn btn-primary") }}</p>
+                    {{ message_upg }}
+                </form>
+            {% else %}
+                <p>Доступных для вас апгрейдов нет.</p>
+            {% endif %}
+        </div>
+    </div>
+{% endif %}
+{% endblock %}
