change index.html; add new descriptions

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,41 @@
                     </p>
                 </div>
             </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('static', filename='img/area_3.jpg') }}" class="d-block w-100">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Брусчатый посёлок - Гопники</h5>
+                    <p>
+                        Возможно именно эта раса хитрее чем лисы. Они бдительны и всегда стоят
+                        на страже своего района. Гопники могут стопорнуть кого-либо, спросить
+                        за жизнь и принести украденные вещи в общак.
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('static', filename='img/area_4.jpg') }}" class="d-block w-100">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Изумрудные холмы - Кавказцы</h5>
+                    <p>
+                        Кавказцы занимают всю площадь Изумрудных Холмов, всегда носят нож
+                        в левом кармане, а в правом пистолет Макарова. Они плохо понимают
+                        по-русски, живут по своим правилам. Когда им грозит опасность,
+                        кавказцы включают на своей девятке музыку и начинают говорить на
+                        "французском" языке.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" type="button" role="button"
+                data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" type="button" role="button"
+                data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </a>
     </div>
 
 
